<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/LinearLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.andrewsoft.mpfesto.Elokeszit" >

	<LinearLayout
		android:id="@+id/lySor1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<TextView
		    android:id="@+id/lbMegnev"
		    android:layout_width="100dp"
		    android:layout_height="fill_parent"
		    android:text="@string/txt_tag"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<EditText
			android:id="@+id/edt_tag"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:ems="10"
			android:inputType="text" />

		<requestFocus
			android:layout_width="wrap_content"
			android:layout_height="match_parent" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/lySor2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="101dp"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_gyr"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<EditText
			android:id="@+id/edt_gyr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="text" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/lySor3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="102dp"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_mennyiseg"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<EditText
			android:id="@+id/edt_mennyiseg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:inputType="number" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnElokSave"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_container_save" >

		</Button>
	</LinearLayout>

	<LinearLayout
		android:layout_width="294dp"
		android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnScanner"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_scan" />

		<Button
		    android:id="@+id/btnContainer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/txt_containers_summary" />

		<Button
		    android:id="@+id/btnPrintElok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_print" />

	</LinearLayout>

</LinearLayout>