<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.andrewsoft.mpfesto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrewsoft.mpfesto.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/btn_termedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/edit"
        android:text="@string/txt_btn_Termek" />

    <Button
        android:id="@+id/btn_festes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/txt_btn_Elokeszit" />

    <Button
        android:id="@+id/btn_meo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/check"
        android:text="@string/txt_btn_Ellenor" />

    <Button
        android:id="@+id/btnNyomtatvany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/print"
        android:text="@string/txt_btn_nyomtatvanyok" />

    <Button
        android:id="@+id/btn_ScanTeszt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_teszt"
        android:visibility="invisible" />

    <com.faizmalkani.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton1"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="0.20"
        app:shadowRadius="5"
        app:color="@color/fab_material_cyan_500" />

</LinearLayout>