<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrewsoft.mpfesto.NewItem" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/valami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbMegnev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/txt_szov_azon"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btnScanAzon"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/scanner"
                android:text="@string/txt_szov_azonscan"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_azon_ut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_szov_megnev"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_tr_megnev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_kocsidb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_tr_kocsi"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tarolodb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_tr_cont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_elo_Megnevez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_csomdb"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_tr_csom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_000" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/save"
        android:text="@string/txt_btn_save"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNullaz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/cancel"
        android:text="@string/txt_btn_elvet"
        android:textStyle="bold" />

</LinearLayout>
