<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_lbl_sum_termnev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/fab_material_blue_900"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txt_lbl_sum_azon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_lbl_sum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_kocsi"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_lbl_sum_kocsidb"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/txt_00"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fab_material_red_900"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/txt_lbl_sum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mennyiseg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_lbl_sum_osszdb"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:gravity="right"
            android:text="@string/txt_0000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fab_material_red_900"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/txt_lbl_sum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_db"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>