<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Elokeszito" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_szov_azonosito"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_kk_azon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="true"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_lbl_termnev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_term_nev"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/result_points"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_kk_altip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_kk_altip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_kocsiszam"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_kk_kocsiszam"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_mennyiseg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_kesz_menny"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_megjegyzes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_megj"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_elokeszitok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edt_emberek"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_kk_scan"
            style="android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/scanner"
            android:text="@string/txt_szov_azonscan" />

        <Button
            android:id="@+id/btn_kk_save"
            style="android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/save"
            android:text="@string/txt_btn_sv" />
    </LinearLayout>

</LinearLayout>